--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=ProcureHubFiles
+
+# Spring DevTools
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+
+# Spring JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=false
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+
