--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
 
+server.port=8081
+main.server.url=http://localhost:8080
+spring.config.import=optional:classpath:application-secret.properties
