--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ProcureHubFiles
 
 # Spring DevTools
 spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+spring.devtools.livereload.enabled=false
 spring.thymeleaf.cache=false
 
 # Spring JPA
@@ -16,3 +16,8 @@ logging.level.org.hibernate=DEBUG
 server.port=8081
 main.server.url=http://localhost:8080
 spring.config.import=optional:classpath:application-secret.properties
+
+# ?? ??? ?? ?? ?? (?: 10MB)
+spring.servlet.multipart.max-file-size=10MB
+# ?? ?? ?? ?? (?: 10MB)
+spring.servlet.multipart.max-request-size=10MB
